# Backie

./: CMakeLists.txt  README.md  Resources.qrc  backup.cpp  backup.h  backupbuilder.cpp  backupbuilder.h  backuperrand.cpp  backuperrand.h  backupfactory.cpp  backupfactory.h  backupschedule.cpp  backupschedule.h  backupscreen.cpp  backupscreen.h  backupscreen.ui  copy.h  destination.cpp  destination.h  dialogcalendar.cpp  dialogcalendar.h  dialogcalendar.ui  errand.cpp  errand.h  folderlock.cpp  folderlock.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h  q  recoverscreen.cpp  recoverscreen.h  recoverscreen.ui  recoveryfolder.cpp  recoveryfolder.h  recoveryscreen.cpp  schedule.cpp  (+21 more)
BackieGui/: CMakeLists.txt  main.cpp
BackieWorker/: CMakeLists.txt  main.cpp
don't_know_what_to_do_with/: backupscreen.cpp  backupscreen.ui  dialogcalendar.cpp  dialogcalendar.h  dialogcalendar.ui  mainwindow.cpp  mainwindow.h  recoveryscreen.cpp  recoveryscreen.h  recoveryscreen.ui  signinscreen.cpp  taskcard.cpp  taskcard.h  taskcard.ui  welcomebackupscreen.cpp
include/: datavec.h  pch.h  schedule.h  taskscheduler.h  template.h  templatebuilder.h  utils.h
old_files/: backupbuilder.cpp  backupbuilder.h  destination.cpp  errand.cpp  errand.h  metadata.cpp  settings.cpp  settings.h  task.cpp  task.h
src/: datavec.cpp  schedule.cpp  taskscheduler.cpp  template.cpp  templatebuilder.cpp  utils.cpp
styles/: backupScreen.css  global.css  mainWindow.css  mainWindow.qss  taskCard.css
